--- a/subgraph/subgraph.yaml
+++ b/subgraph/subgraph.yaml
@@ -6,8 +6,9 @@ dataSources:
     name: NFTMarketPlace
     network: celo-alfajores
     source:
-      address: "0xEF43C1A81099937F83220546056a5fDb046eAe3d"
+      address: '0xEF43C1A81099937F83220546056a5fDb046eAe3d'
       abi: NFTMarketPlace
+      startBlock: 14419792
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.5
