--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@rainbow-me/rainbowkit": "^0.7.4",
     "ethers": "^5.7.2",
+    "graphql": "^16.6.0",
     "next": "13.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "styled-components": "^5.3.6",
+    "urql": "^3.0.3",
     "wagmi": "^0.7.10"
   }
 }
