--- a/subgraph/package.json
+++ b/subgraph/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "celonftmarketplace",
+  "name": "celo-nft-marketplace",
   "license": "UNLICENSED",
   "scripts": {
     "codegen": "graph codegen",
     "build": "graph build",
-    "deploy": "graph deploy --node https://api.thegraph.com/deploy/ scottpeat/celonftmarketplace",
-    "create-local": "graph create --node http://localhost:8020/ scottpeat/celonftmarketplace",
-    "remove-local": "graph remove --node http://localhost:8020/ scottpeat/celonftmarketplace",
-    "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 scottpeat/celonftmarketplace"
+    "deploy": "graph deploy --node https://api.thegraph.com/deploy/ scottpeat/celo-nft-marketplace",
+    "create-local": "graph create --node http://localhost:8020/ scottpeat/celo-nft-marketplace",
+    "remove-local": "graph remove --node http://localhost:8020/ scottpeat/celo-nft-marketplace",
+    "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 scottpeat/celo-nft-marketplace"
   },
   "dependencies": {
     "@graphprotocol/graph-cli": "0.32.0",
